# renderer

./: .gitignore  CMakeLists.txt  Makefile.win  README.md  config.json  demo.json  imgui.ini  renderer.dev  renderer.layout  renderer.sln  renderer.vcxproj  win_build.bat
assets/: Spider_mesh.ozz  Spider_skeleton.ozz
assets/shaders/: bone.fs  bone.vs  cubemaps.frag  cubemaps.vs  deferred_light_box.vs  deferred_shading.fs  deferred_shading.vs  depthMap.fs  depthMap.vs  depthMapDebug.fs  depthMapDebug.vs  dirLightDepth.vs  edegeDetect.vs  edgeDetect.fs  edgeDetect.vs  g_buffer.fs  g_buffer.vs  joint.vs  light.fs  light.vs  main.fs  main.vs  normal_mapping.fs  pbr.fs  pbr.vs  pointShadowDepth.vs  point_shadow.fs  point_shadow.vs  point_shadows_depth.fs  point_shadows_depth.gs  screen.fs  screen.vs  sdf.fs  sdf.vs  singlecolor.fs  skybox.fs  skybox.vs  smaaBlending.fs  smaaBlending.vs  smaaEdgeDetect.fs  (+22 more)
deprecated/: bvh.cpp  bvh.hpp  context.cpp  context.hpp  light.cpp  light.hpp  main_raytrace.cpp  main_raytrace.hpp  material.cpp  material.hpp  mesh.cpp  parser.cpp  parser.hpp  plane.cpp  raytracer.cpp  raytracer.hpp  renderQueue.cpp  renderQueue.hpp  shape.hpp  sphere.cpp  textmgr.hpp  union.cpp  union.hpp
include/: MemoryPool.h  MemoryPool.hpp  base.hpp  bbox.hpp  camera.hpp  color.hpp  common.hpp  curve.hpp  defines.hpp  draw.hpp  error.hpp  film.hpp  geometry.hpp  intersect_result.hpp  light.hpp  main_ecs.hpp  main_raytrace.hpp  main_realtime.hpp  material.hpp  matrix.hpp  parser.hpp  perspectivecamera.hpp  plane.hpp  profiler.hpp  quaternion.hpp  ray.hpp  raytracer.hpp  renderQueue.hpp  renderer.hpp  sdf.hpp  shape.hpp  sphere.hpp  stdafx.h  tiny_obj_loader.cc  tiny_obj_loader.h  transform.hpp  union.hpp  vector.hpp
include/com/: actionCom.hpp  animation.hpp  bbox.hpp  bufferCom.hpp  bvh.cpp  bvh.hpp  camera.hpp  cameraCom.hpp  color.hpp  geometry.hpp  glcommon.hpp  intersect_result.hpp  kdtree.hpp  keyState.hpp  lightCom.hpp  materialCom.hpp  matrix.hpp  mesh.hpp  meshes.hpp  miscCom.hpp  motionCom.hpp  physics.hpp  quaternion.hpp  ray.hpp  renderMode.hpp  screenSize.hpp  sdlContext.hpp  shader.hpp  spatialData.hpp  transform.hpp  vertex.hpp
include/ecs/: component_handle.cpp  component_handle.hpp  ecs.hpp  event.cpp  event.hpp  event_builtin.hpp  manager.hpp  obj.hpp  object.cpp  object.hpp  object_impl.hpp  object_manager.cpp  object_manager.hpp  object_manager_impl.hpp  setting.hpp  system.cpp  system.hpp  test.cpp  test.hpp
include/event/: actionEvent.hpp  bufferEvent.hpp  lightEvent.hpp  loaderEvent.hpp  materialEvent.hpp  miscEvent.hpp  physicsEvent.hpp  renderEvent.hpp  shaderEvent.hpp  spatialEvent.hpp  textureEvent.hpp  uiEvent.hpp  winEvent.hpp
include/realtime/: buffermgr.hpp  context.hpp  glcommon.hpp  glutils.hpp  importer.hpp  model.hpp  renderer.hpp  shadermgr.hpp  textmgr.hpp  texturemgr.hpp
include/shapes/: bvh.hpp  mesh.hpp  plane.hpp  sphere.hpp  union.hpp
include/system/: animationSys.hpp  batchSys.hpp  bufferSys.hpp  bvhSys.hpp  cameraSys.hpp  configSys.hpp  env.hpp  envSys.hpp  kdtreeSys.hpp  lightSys.hpp  loader.cpp  loader.hpp  loaderSys.hpp  materialSys.hpp  motionSys.hpp  physicsSys.hpp  render.cpp  render.hpp  renderSys.hpp  renderer.hpp  sceneGraphSys.hpp  shader.hpp  shaderSys.hpp  spatialSys.hpp  statSys.hpp  texture.cpp  texture.hpp  textureSys.hpp  uiSys.hpp
include/utils/: MemoryPool.hpp  defines.hpp  glutils.hpp  helper.hpp  memory.hpp  parallel.hpp
lib/: SDL2.lib  SDL2main.lib
lib/32/debug/: assimp-vc140-mt.lib  glew32sd.lib  glfw3.lib
lib/32/debug/static/: SDL2main.lib
lib/32/release/: assimp-vc140-mt.lib  glew32s.lib  glfw3.lib
lib/32/release/static/: SDL2.lib  SDL2main.lib
lib/64/debug/: glew32sd.lib  glfw3.lib
lib/64/release/: glew32s.lib  glfw3.lib
mac_build/: cmake_install.cmake
mac_build/renderer.xcodeproj/: project.pbxproj
mac_build/renderer.xcodeproj/project.xcworkspace/xcuserdata/wyman.xcuserdatad/: UserInterfaceState.xcuserstate
mac_build/renderer.xcodeproj/xcuserdata/wyman.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  install.xcscheme  renderer.xcscheme  xcschememanagement.plist
samples/: single_tri.json
src/: bbox.cpp  camera.cpp  color.cpp  common.cpp  defines.cpp  film.cpp  geometry.cpp  intersect_result.cpp  light.cpp  main.cpp  main_ecs.cpp  main_raytrace.cpp  main_realtime.cpp  material.cpp  matrix.cpp  parser.cpp  perspectivecamera.cpp  plane.cpp  profiler.cpp  ray.cpp  raytracer.cpp  renderer.cpp  shape.cpp  sphere.cpp  transform.cpp  union.cpp  vector.cpp
src/com/: bbox.cpp  camera.cpp  color.cpp  geometry.cpp  intersect_result.cpp  matrix.cpp  ray.cpp  shader.cpp  shaderCom.cpp  transform.cpp
src/ecs/: system.cpp  test.cpp
src/realtime/: buffermgr.cpp  context.cpp  model.cpp  shadermgr.cpp  texturemgr.cpp
src/shapes/: bvh.cpp  mesh.cpp  plane.cpp  sphere.cpp  union.cpp
src/system/: animationSys.cpp  batchSys.cpp  bufferSys.cpp  bvhSys.cpp  cameraSys.cpp  configSys.cpp  env.cpp  envSys.cpp  kdtreeSys.cpp  lightSys.cpp  loader.cpp  loaderSys.cpp  materialSys.cpp  motionSys.cpp  physicsSys.cpp  render.cpp  renderSys.cpp  renderer.cpp  sceneGraphSys.cpp  shader.cpp  shaderSys.cpp  spatialSys.cpp  statSys.cpp  texture.cpp  textureSys.cpp  uiSys.cpp
src/utils/: defines.cpp  memory.cpp  parallel.cpp  profiler.cpp
unittest/: unittest.vcxproj  unittest.vcxproj.filters  unittestpp.lib
unittest/src/: main.cpp  test_matrix.cpp
vs_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  renderer.sln  renderer.vcxproj  renderer.vcxproj.filters
